# UpStudioFOGTool

./: .gitignore  README.md  build_exe.ps1  main.py  order.txt  page1.py  page2.py  pyproject.toml  upstudio_fog_tool.spec
